# breast-cancer-detection-ml

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  data_loader.py  main.py  predictor.py  preprocessor.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yaml
k8s/: inference-pipeline-deployment.yaml  train-pipeline-deployment.yaml
k8s/cloud/: configmap.yaml  deploy-nfs-dinamico.yaml  deploy_ingress.yaml  hostpath.yaml  ingress.yaml  kubeconfig.yaml  namespace.yaml  persistentvolume.yaml  resource_quota.yaml  resource_quota_volume.yaml
k8s/local/: cronjob.yaml  hostpath.yaml  job.yaml  kubeconfig.yaml  persistentvolume.yaml  pod-deployment.yaml  resource_quota.yaml  statefulset.yaml  storageclass.yaml
models/: logistic_regression.joblib  preprocessor.joblib
pipelines/: __init__.py  data_loader.py  evaluator.py  model_saver.py  predictor.py  preprocessor.py  trainer.py
scripts/: load_test.py  massive_load_test.py
src/: model_evaluator.py  model_trainer.py  predictor.py  preprocessor.py
tests/: conftest.py
tests/src/: __init__.py  test_data_loader.py  test_model_evaluator.py  test_model_trainer.py  test_predictor.py  test_preprocessor.py
tools/: ml_service.py  run.py
