[project]
name = "breast-cancer-detection-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.1.0",
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
]
